--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "lucide-vue-next": "^0.562.0",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.4.0",
     "universal-cookie": "^7.2.2",
     "vee-validate": "^4.12.5",
     "vue": "^3.3.11",
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^9.36.0",
     "file-saver": "^2.0.5",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.2.2",
     "vite": "^7.1.7",
     "vue-tsc": "^3.0.8"
