--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_APP_MODE=production
+VITE_APP_API_BASE_URL=https://jsonplaceholder.typicode.com
 VITE_APP_API_URL=https://jsonplaceholder.typicode.com/posts
