--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/vue-query": "^5.28.0",
     "@tanstack/vue-table": "^8.13.2",
     "@types/node": "^20.10.4",
+    "@vee-validate/yup": "^4.15.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vueuse/core": "^13.9.0",
     "@vueuse/integrations": "^13.9.0",
