--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vue-tsc && vite build",
     "build:development": "vue-tsc && vite build --mode development",
     "build:sandbox": "vue-tsc && vite build --mode sandbox",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mock": "prism mock ./docs/swagger.json -p 4010",
+    "mock:watch": "prism mock ./docs/swagger.json -p 4010 --watch",
+    "mock:dynamic": "prism mock ./docs/swagger.json -p 4010 --dynamic"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
