--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^3.9.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "concurrently": "^9.2.1",
     "date-fns": "^3.6.0",
     "lucide-vue-next": "^0.562.0",
     "nprogress": "^0.2.0",
